vbnc/vbnc/tests/Errors/30068.vb
Module bug
    Function I() As Integer

    End Function
    Sub Main()
        For i = 1 To 2

        Next
    End Sub
End Module